# coref

./: README.md  coref_inf.py  coref_prep.py  coref_training.py  inference_coreference.py  main.py  pyproject.toml  training_config.yml  training_configs.yml
data/: coreference_dataset.csv
