[project]
name = "coref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "en-core-web-md",
    "mlx>=0.27.1",
    "mlx-lm[train]>=0.26.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "spacy[apple]>=3.8.7",
    "transformers>=4.54.1",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
